@@ -1149,7 +1149,7 @@ COMPACT_LATEX          = NO
 # by the printer. Possible values are: a4, a4wide, letter, legal and 
 # executive. If left blank a4wide will be used.
 
-PAPER_TYPE             = a4wide
+PAPER_TYPE             = letter
 
 
 # The EXTRA_PACKAGES tag can be to specify one or more names of LaTeX 
